--- a/src/App.css
+++ b/src/App.css
@@ -552,7 +552,6 @@ samp {
   color: #fff; /* Màu chữ cho button được chọn */
 }
 
-
 .list-top-coin-display {
   padding: 0 12px;
   display: grid;
@@ -605,7 +604,7 @@ samp {
   line-height: 1.75rem;
   font-weight: 700;
 }
-.display-nick-lien-quan{
+.display-nick-lien-quan {
   display: flex;
   justify-content: space-between;
 }
@@ -625,8 +624,8 @@ samp {
   font-weight: 500;
 }
 .text-gioi-thieu-nick-lien-quan {
-  font-size: .875rem;
-    line-height: 1.25rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 .menu-list-acc-lien-quan {
   display: flex;
@@ -634,22 +633,21 @@ samp {
   flex-wrap: wrap;
 }
 .img-list-acc-lien-quan {
-
   width: 100%;
   border-radius: 5px;
 }
 .text-list-acc-lien-quan {
-  font-size: .875rem;
-    line-height: 1.25rem;
-    font-weight: 500;
-    width: 90%;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 500;
+  width: 90%;
 }
 .description-list-acc-lien-quan {
-  font-size: .875rem;
-    line-height: 1.25rem;
-    font-weight: 600;
-    color: #dc2626;
-    width: 90%;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 600;
+  color: #dc2626;
+  width: 90%;
 }
 .list-acc-lien-quan {
   flex-basis: calc(24%);
@@ -674,25 +672,24 @@ samp {
 .header-main {
   background-color: #fff;
   position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-    transition: box-shadow 0.3s ease;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  transition: box-shadow 0.3s ease;
 }
 .header-main.scrolled {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Bóng khi cuộn */
   /* Các thuộc tính khác cho header khi được cuộn */
 }
 .body-lq-top-up {
-  width: 1260px;  
+  width: 1260px;
   height: 36px;
   margin: 0 auto;
 }
 
 .background-body-lq-top-up {
   width: 100%;
- 
 }
 .header-body-top-up {
   width: 100%;
@@ -701,7 +698,7 @@ samp {
 .body-lq-top-up-sub {
   display: flex;
   align-items: center;
-  width: 1260px;  
+  width: 1260px;
   height: 36px;
   margin: 0 auto;
   padding: 16px 0;
@@ -717,12 +714,11 @@ samp {
 .content-body-lq-top-up-sub > div {
   margin-left: 10px;
 }
-.text-body-lq-top-up-sub{
+.text-body-lq-top-up-sub {
   font-weight: 500;
 }
 .background-body-top-up-bottom {
   display: flex;
-  
 }
 .body-top-up-bottom {
   background-color: #fff;
@@ -735,11 +731,11 @@ samp {
 .display-body-top-up-bottom {
   margin: 36px auto;
 }
-.text-body-top-up-bottom{
+.text-body-top-up-bottom {
   font-size: 1.125rem;
-    line-height: 1.75rem;
-    font-weight: 600;
-    color: #dc2626;
+  line-height: 1.75rem;
+  font-weight: 600;
+  color: #dc2626;
 }
 .icon-top-up-bottom {
   color: #dc2626;
@@ -755,53 +751,126 @@ samp {
   margin: 0 auto;
   display: flex;
 }
-.footer{
+.footer {
   flex: 1;
   margin: 0 10px;
   color: #fff;
 }
-.footer-text-shop-game{
+.footer-text-shop-game {
   line-height: 1.5rem;
   font-weight: 500;
-  font-size: .875rem;
-  margin-bottom: .75rem;
+  font-size: 0.875rem;
+  margin-bottom: 0.75rem;
 }
-.footer-text-he-thong{
+.footer-text-he-thong {
   font-weight: 700;
-  font-size: .875rem;
+  font-size: 0.875rem;
   line-height: 1.25rem;
-  margin-bottom: .25rem;
-    margin-top: .25rem;
-    color: #dc2626;
+  margin-bottom: 0.25rem;
+  margin-top: 0.25rem;
+  color: #dc2626;
 }
-.footer-text-chung-toi{
+.footer-text-chung-toi {
   line-height: 1.5rem;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
   font-size: 14px;
 }
 .footer-logo {
   height: 3rem;
 }
-.footer-thong-tin{
+.footer-thong-tin {
   margin-top: 12px;
   font-weight: 600;
   font-size: 1.25rem;
   line-height: 1.75rem;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
 }
 .footer-body-thong-tin {
-  font-size: .875rem;
-    line-height: 1.25rem;
-    padding-bottom: .5rem;
-    padding-top: .5rem;
-    padding-left: .75rem;
-    padding-right: .75rem;
-    background-color: #555555;
-    border-radius: .25rem;
-    margin-bottom: .5rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  padding-bottom: 0.5rem;
+  padding-top: 0.5rem;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  background-color: #555555;
+  border-radius: 0.25rem;
+  margin-bottom: 0.5rem;
 }
-.img-lien-he{
+.img-lien-he {
   width: 15rem;
   height: auto;
   max-width: 100%;
+}
+@media (max-width: 768px) {
+}
+
+@media (max-width: 480px) {
+  .body {
+    height: 570px;
+  }
+  .nav-bar-main {
+    display: none;
+  }
+
+  .header-main {
+    width: 100vw;
+  }
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header-logo {
+    display: inline-block;
+  }
+  .search-box {
+    display: none;
+  }
+
+  .body {
+    width: 100%;
+  }
+
+  .container-main {
+    width: 100%;
+  }
+  .login {
+    display: none;
+  }
+  .user-controls {
+    display: flex;
+    align-content: flex-start;
+    flex-direction: row-reverse;
+  }
+  .back-ground-main {
+    display: block;
+    width: 100%;
+    height: 200px;
+    padding: 0 20px;
+  }
+  .back-ground-main > img {
+    object-fit: contain;
+    object-position: center;
+    width: 100%;
+    height: 100%;
+  }
+  .display-body {
+    margin: 80px auto;
+    width: 100%;
+  }
+  .background-top-coin {
+    margin-top: 20px;
+    height: 320px;
+  }
+}
+.mySwiper {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+.img-swiper{
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
 }
