--- a/src/App.css
+++ b/src/App.css
@@ -151,6 +151,7 @@ samp {
 .header-logo {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .search-icon {
   top: 0;
@@ -678,7 +679,7 @@ samp {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 2;
   transition: box-shadow 0.3s ease;
 }
 .header-main.scrolled {
@@ -918,6 +919,9 @@ samp {
     bottom: 36px;
     top: auto;
   }
+  .header-logo {
+    display: flex;
+  }
 }
 .text-background-searchlist-bottom{
   color: #282c34;
@@ -1060,4 +1064,86 @@ samp {
 }
 .bottom-bar-search-list {
   position: relative;
+}
+.login-form-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Một lớp mờ để tối các vùng khác */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+}
+.login-form-container {
+  position: relative;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  width: 80%; /* Độ rộng của form, có thể thay đổi tùy ý */
+  max-width: 400px; 
+
+}
+
+.login-form {
+  width: 100%;
+  
+}
+.text-login{
+  font-weight: 600;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  text-align: center;
+  margin-top: 16px;
+  margin-bottom: 32px;
+}
+.login-fb{
+  display: flex;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(37, 99, 235);
+  border-radius: 5px;
+  color: #fff;
+  margin-bottom: 20px;
+}
+.form-group{
+  margin-top: 18px;
+}
+.form-group > input {
+  border-radius: 5px;
+  width: 100%;
+  padding: 10px;
+  background-color: rgba(22, 24, 35, 0.06);
+  border: none;
+}
+input:focus {
+  outline: none;
+}
+.btn{
+  border-radius: 8px;
+  width: 100%;
+  padding: 15px;
+  margin-top: 18px;
+  border: none;
+  color: #282c34;
+  background-color: #fff;
+  border: solid 1px #282c34;
+}
+.btn.btn-primary {
+  border: none;
+  background-color: #dc2626;
+  color: #fff;
+}
+.btn:last-child {
+  margin-top: 5px;
+}
+.login-clear-icon{
+  position: absolute;
+  top: 10px;
+  right: 10px; /* Điều chỉnh giá trị tùy theo vị trí mong muốn */
+  cursor: pointer;
 }
