--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,7 @@ samp {
 
 .header-logo > img {
   height: 3rem;
+  margin-left: 10px;
 }
 .search-input-header {
   padding: 5px;
@@ -780,7 +781,8 @@ samp {
   font-size: 14px;
 }
 .footer-logo {
-  height: 3rem;
+  width: 100%;
+
 }
 .footer-thong-tin {
   margin-top: 12px;
@@ -809,6 +811,7 @@ samp {
 }
 
 @media (max-width: 480px) {
+  
   .body {
     height: 570px;
   }
@@ -925,6 +928,10 @@ samp {
 }
 .text-background-searchlist-bottom{
   color: #282c34;
+}
+.logo-login{
+  width: 100%;
+  height: 100% !important;
 }
 .background-searchlist-bottom {
   width: 100%;
